[gd_scene load_steps=4 format=3 uid="uid://c6xvv2r524gst"]

[ext_resource type="Script" uid="uid://dc20sermvc87q" path="res://entry.gd" id="1_rixl5"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rixl5"]

[sub_resource type="ButtonGroup" id="ButtonGroup_jnwwp"]

[node name="Entry" type="Node2D"]
script = ExtResource("1_rixl5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="KeyboardButton" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_rixl5")
text = "Keyboard"

[node name="GamepadButton" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_jnwwp")
text = "Gamepad
"

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/KeyboardButton" to="." method="_on_keyboard_button_toggled"]
[connection signal="toggled" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/GamepadButton" to="." method="_on_gamepad_button_toggled"]
